<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.zjy.zlibrary.widget.TitleBar
        android:id="@+id/titleBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/app_color"
        android:visibility="gone" />

    <FrameLayout
        android:id="@+id/fl_inputmember"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:overScrollMode="never">

        <LinearLayout
            android:id="@+id/member_info_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white_2nd"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/bg_cornor_white"
                    android:orientation="vertical"
                    android:paddingBottom="16.66dp"
                    android:paddingTop="10dp">

                    <include layout="@layout/member_info" />

                    <LinearLayout
                        android:id="@+id/score_layout"
                        android:layout_width="match_parent"
                        android:layout_height="44dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="20dp"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/btn_add_point"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="@drawable/shape_member_id_edit"
                            android:padding="6dp"
                            android:text="@string/add_point"
                            android:textColor="@color/black_1st"
                            android:textSize="14sp"
                            tools:ignore="HardcodedText" />

                        <Button
                            android:id="@+id/btn_reduce_point"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="15dp"
                            android:layout_weight="1"
                            android:background="@drawable/shape_member_id_edit"
                            android:padding="6dp"
                            android:text="@string/reduce_point"
                            android:textColor="@color/black_1st"
                            android:textSize="14sp"
                            tools:ignore="HardcodedText" />
                    </LinearLayout>

                    <Button
                        android:id="@+id/btn_member_recharge"
                        android:layout_width="match_parent"
                        android:layout_height="44dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="15dp"
                        android:background="@drawable/selector_btn_main"
                        android:gravity="center"
                        android:padding="6dp"
                        android:text="@string/recharge"
                        android:textColor="@color/white_1st"
                        android:textSize="14sp" />
                </LinearLayout>

            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/white_1st"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="10dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/member_privilege"
                        android:textColor="@color/black_1st"
                        android:textSize="14sp"
                        tools:ignore="HardcodedText" />

                    <TextView
                        android:id="@+id/tv_member_use_record"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:drawableLeft="@drawable/privilege"
                        android:drawablePadding="5dp"
                        android:text="@string/use_record"
                        android:textColor="@color/gray_6th"
                        android:textSize="14sp"
                        tools:ignore="HardcodedText" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="5dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp">

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/recyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/tv_no_privilege"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="20dp"
                        android:background="@drawable/popup_window_bg"
                        android:gravity="center"
                        android:text="@string/no_privilege"
                        android:textColor="#a4a4a4"
                        android:textSize="16sp" />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>